--- a/styles/style.css
+++ b/styles/style.css
@@ -1,36 +1,100 @@
-@font-face {font-family: "Reclamo";src: url("ressources/font/Reclamo/Reclamo-Light.woff2") format('woff2');font-weight: light;}@font-face {font-family: "Reclamo";src: url("ressources/font/Reclamo/Reclamo-Medium.woff2") format('woff2');font-weight: medium;}@font-face {font-family: "Reclamo";src: url("ressources/font/Reclamo/Reclamo-Regular.woff2") format('woff2');font-weight: 400;}@font-face {font-family: "Reclamo";src: url("ressources/font/Reclamo/Reclamo-SemiBold.woff2") format('woff2');font-weight: 600;}
+@font-face {
+    font-family: "Reclamo";
+    src: url("ressources/font/Reclamo/Reclamo-Light.woff2") format('woff2');
+    font-weight: light;
+}
 
-*{
+@font-face {
+    font-family: "Reclamo";
+    src: url("ressources/font/Reclamo/Reclamo-Medium.woff2") format('woff2');
+    font-weight: medium;
+}
+
+@font-face {
+    font-family: "Reclamo";
+    src: url("ressources/font/Reclamo/Reclamo-Regular.woff2") format('woff2');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Reclamo";
+    src: url("ressources/font/Reclamo/Reclamo-SemiBold.woff2") format('woff2');
+    font-weight: 600;
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-:root{
+
+:root {
     --white-color: white;
     --green-color: #D5FF40;
 }
-a{
+
+a {
     text-decoration: none;
 }
-a:visited { 
-    color: #fff; 
-   }
 
-ul{
-    list-style-type: none;  
+a:visited {
+    color: #fff;
 }
 
-body{
+ul {
+    list-style-type: none;
+}
+
+body {
     background-color: #0b0b0b;
 }
-.nav-bar{
+
+/* NAV BAR  */
+.nav-bar {
     margin-top: 20px;
 }
-.nav{
+
+.nav {
     font-family: "Reclamo";
     font-weight: 600;
     display: flex;
     justify-content: space-around;
-    font-size: 30px;
+    font-size: 40px;
     color: var(--white-color);
+}
+
+/* ACCEUIL  */
+#nom {
+    color: var(--white-color);
+}
+
+#profession {
+    color: var(--green-color);
+    width: 800px;
+}
+
+#container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#txt-nom {
+    font-family: 'Reclamo';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 120px;
+}
+
+#photo {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 767px) {
+    #page-acceuil {
+        flex-direction: column;
+    }
 }
