--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -56,6 +57,7 @@ ul {
 body {
     background-color: #0b0b0b;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 
 }
 
@@ -82,6 +84,7 @@ h2{
     color: var(--white-color);
     padding-bottom: 10px;
     border-bottom: solid var(--white-color) 3px;
+    width: 100%;
 }
 
 /* ACCEUIL  */
@@ -107,11 +110,9 @@ h2{
     font-style: normal;
     font-weight: 600;
     font-size: 70px;
-   
 }
 #profession{
     width: 500px;
-
 }
 
 #photo {
@@ -406,6 +407,32 @@ h2{
 
 
 /*==================== footer ====================*/
+.footer{
+    background-color: #708526;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 417px;
+}
+.footer h1{
+    font-family: 'Reclamo';
+    font-size: 72px;
+    color: #fff;
+}
+.footer li{
+    font-family: 'Reclamo';
+    font-size: 40px;
+    color: #fff;
+}
+.li-1{
+    margin: 100px;
+}
+.icone{
+    font-size: 30px;
+    margin-left: 20px;
+    color: #fff;
+}
+
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
 
